--- a/_includes/head.html
+++ b/_includes/head.html
@@ -85,4 +85,7 @@
 	<link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
 	<!-- Styles -->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+
+  <script src="{{ '/assets/js/copy-code.js' | relative_url }}"></script>
+
 </head>
