--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,5 +87,6 @@
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
 
   <script src="{{ '/assets/js/copy-code.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/open-external-links.js' | relative_url }}"></script>
 
 </head>
