--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,4 +35,5 @@ layout: main
       {% include disqus.html %}
     </div> <!-- End Wrap Content -->
   </div> <!-- End Page Content -->
+  <script src="{{ '/assets/js/copy-code.js' | relative_url }}"></script>
 </article> <!-- End Article Page -->
