--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -944,7 +944,7 @@ table tfoot td {
 .about .cover-author-image {
   width: 100px;
   height: 100px;
-  margin: 0 auto 10px;
+  margin: 10px auto;
   -webkit-border-radius: 100%;
           border-radius: 100%;
   overflow: hidden;
