--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,6 +4,12 @@ layout: default
 
 <aside class="sidebar">
   <header>
+    <section class="contact">
+      <h3 class="contact-title">Site map</h3>
+      <ul>
+          <li><a href="https://liqrase.github.io/cafe/" target="_blank"><i class="fa fa-houser" aria-hidden="true"></i></a></li>
+      </ul>
+    </section> <!-- End Section Site Map -->
     <div class="about">
       <div class="cover-author-image">
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
