--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -16,7 +16,7 @@ layout: default
     <section class="contact">
       <h3 class="contact-title">Site Map</h3>
       <ul>
-        <li><a href="https://liqrase.github.io/cafe/" target="_blank"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+        <li><a href="https://liqrase.github.io/cafe/" target="_self"><i class="fa fa-home" aria-hidden="true"></i></a></li>
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
