--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -17,6 +17,7 @@ layout: default
       <h3 class="contact-title">Site Map</h3>
       <ul>
         <li><a href="https://liqrase.github.io/cafe/" target="_self"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+        <li><a href="https://github.com/Liqrase" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
