--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,5 +8,7 @@
   </div>
   
   <!-- {% include analytics.html %} -->
+
+<script src="{{ "/assets/js/open-external-links.js" | relative_url }}"></script>  
 </body>
 </html>
