--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1259,6 +1259,12 @@ header {
   height: 100%;
 }
 
+.page-image {
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 5px;
+}
+
 .page-footer {
   display: -webkit-box;
   display: -webkit-flex;
