--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -18,6 +18,7 @@ layout: default
       <ul>
         <li><a href="https://liqrase.github.io/cafe/" target="_self"><i class="fa fa-home" aria-hidden="true"></i></a></li>
         <li><a href="https://github.com/Liqrase" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+        <li><a href="https://jp.finalfantasyxiv.com/lodestone/character/49115670/ " target="_blank"><i class="fa fa-bath" aria-hidden="true"></i></a></li>
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
