--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,8 +5,8 @@ layout: default
 <aside class="sidebar">
   <header>
     <div class="about">
-      <p class="diaryname">
-        <a href="{{site.baseurl}}/">Myプログラム雑記</a></p>
+      <p class="kari">
+        <a  class="diaryname" href="{{site.baseurl}}/">Myプログラム雑記</a></p>
       <div class="cover-author-image">
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
       </div>
