--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 {% include head.html %}
 <body>
 
@@ -7,8 +7,6 @@
     {{ content }}
   </div>
   
-  
-
-<script src="{{ "/assets/js/open-external-links.js" | relative_url }}"></script>  
+  {% include analytics.html %}
 </body>
 </html>
