--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,6 +5,8 @@ layout: default
 <aside class="sidebar">
   <header>
     <div class="about">
+      <p class="kari">
+        <a  class="diaryname" href="{{site.baseurl}}/">Myプログラム雑記帳</a></p>
       <div class="cover-author-image">
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
       </div>
