--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@
  * 2. Prevent adjustments of font size after orientation changes in
  *    IE on Windows Phone and in iOS.
  */
-html {
+ html {
   line-height: 1.15;
   /* 1 */
   -ms-text-size-adjust: 100%;
@@ -941,10 +941,17 @@ table tfoot td {
   text-align: center;
 }
 
+.diaryname {
+  font-size: 20px;
+  margin: 5px auto 10px;
+  text-decoration: none; /* 下線を消す */
+  color: inherit; /* 親要素の文字色を継承 */
+}
+
 .about .cover-author-image {
   width: 100px;
   height: 100px;
-  margin: 0 auto 10px;
+  margin: 10px auto;
   -webkit-border-radius: 100%;
           border-radius: 100%;
   overflow: hidden;
@@ -1094,6 +1101,11 @@ table tfoot td {
           transform: scale(1.2);
 }
 
+footer {
+  background-color: #8bbf5f;
+  border-radius: 10px;
+}
+
 footer .copyright {
   font-size: 14px;
   text-align: center;
@@ -1199,6 +1211,11 @@ a.newer-posts:hover {
   padding: 20px;
 }
 
+header {
+  background-color: #d2e3b6;
+  border-radius: 10px;
+}
+
 .header-page {
   text-align: center;
   margin: 10px 0;
@@ -1206,6 +1223,7 @@ a.newer-posts:hover {
 
 .header-page .page-title {
   font-weight: 400;
+  border: 10px 0 0;
   margin: 0 0 10px;
   line-height: 1.3;
 }
@@ -1246,6 +1264,11 @@ a.newer-posts:hover {
 .page-cover-image .page-image {
   width: 100%;
   height: 100%;
+}
+
+.page-image {
+  border-top: 2px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
 }
 
 .page-footer {
