--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     {{ content }}
   </div>
   
+  <script src="{{ '/assets/js/open-external-links.js' | relative_url }}"></script>
+
   {% include analytics.html %}
+  
 </body>
 </html>
